@@ -103,6 +103,9 @@
    - deraadt@cvs.openbsd.org 2001/03/01 02:45:10
      [auth-rsa.c auth2.c deattack.c packet.c]
      KNF
+   - deraadt@cvs.openbsd.org 2001/03/01 03:38:33
+     [cli.c cli.h rijndael.h ssh-keyscan.1]
+     copyright notices on all source files
 
 20010304
  - (bal) Remove make-ssh-known-hosts.1 since it's no longer valid.
